# aleph0_game

./: .gitignore  CITATION.cff  README.md  pyproject.toml
aleph0_game/games/: __init__.py  chess5d.py  game.py  jenga.py  mnk.py  mnk_with_resigning.py  pyspiel_games.py
aleph0_game/scripts/: play_game.py
src/games/: __init__.py  chess5d.py  game.py  jenga.py  mnk.py  mnk_with_resigning.py  selection_game.py  test_gameplay.py  tictactoe.py
src/games/chess/: __init__.py
src/games/chess/game/: __init__.py  board.py  chess2d.py  chess5d.py  chess5d_old.py  multiverse.py  piece.py  timeline.py
src/games/jenga/game/: block.py  jenga.py
src/games/tictactoe/: __init__.py
src/games/tictactoe/game/: tictactoe.py  ultimate.py
test/: test_chess.py  test_games.py
test/notation_tests/: game_1029241.pgn  game_2005340.pgn  game_2289737.pgn  game_2341220.pgn  game_2362471.pgn  game_2528049.pgn  game_2606924.pgn  game_2782776.pgn  game_2934187.pgn  game_3098227.pgn
